fix alignment issues

--- a/app/assets/stylesheets/application/_home.css.sass
+++ b/app/assets/stylesheets/application/_home.css.sass
@@ -42,6 +42,9 @@
 
 .filmstrip
   text-align: center
+  height: 175px
+  margin-bottom: 20px
   .filmstrip-item
-    display: inline-block
+    float: left
+    width: 234px
 
